# taskit

./: .gitignore  Package.swift  README.md  TODO.md  meson.build
.swiftpm/xcode/package.xcworkspace/xcuserdata/batman.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/batman.xcuserdatad/xcschemes/: xcschememanagement.plist
TaskitSwift/: README.md  TaskitApp.swift
TaskitSwift/Managers/: DataTransferManager.swift  NotificationManager.swift  RecurrenceManager.swift  RemindersManager.swift
TaskitSwift/Models/: Attachment.swift  Project.swift  Tag.swift  Task.swift  TaskTemplate.swift
TaskitSwift/Views/: ContentView.swift  DashboardView.swift  FocusView.swift  ProjectEditView.swift  SettingsView.swift  SidebarView.swift  TaskEditView.swift  TaskListView.swift  TaskRow.swift
data/: meson.build  org.gnome.Taskit.desktop.in  org.gnome.Taskit.gresource.xml
src/: Application.vala  DatabaseManager.vala  ExportManager.vala  HistoryManager.vala  NotificationManager.vala  Window.vala  main.vala  meson.build
src/Models/: Project.vala  Task.vala
src/Widgets/: SidebarRow.vala  TaskDialog.vala  TaskRow.vala
